2005-11-17  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::addMessage): Change format of local log to
	(::tkchat::IncrMessageCounter):      match jabber logs. Add ability to
	(::tkchat::Hook):                    load local and jabber logs from
	(::tkchat::AddTraffic):              file (new proc
	(::tkchat::CreateGUI):               ::tkchat::LoadChatLog). Fix
	(::tkchat::OpenChatLog):             logging so that it starts when
	(::tkchat::LoadChatLog):             chat initializes. Add missing
	(::tkchat::ChatLogHook):             nickchange messages.
	(::tkchat::Init):
	(::tkchat::parseMsg):

2005-11-08  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::addMessage): Consolidate duplicate code into
	(::tkchat::addAction):               addMessage. Removed addAction.
	Fixes multi-line /me indentation.

	* tkchat.tcl (::tkchat::userPost): Move switch arm out to new procedure
	(::tkchat::checkCommand):          checkCommand.

	* tkchat.tcl (::tkchat::CreateGUI): Remove unneeded calls to
	(::tkchat::IncrMessageCounter):     ResetMessageCounter. Make the
	(::tkchat::WinicoCallback):         remaining one an idle callback.

	* tkchat.tcl (::tkchat::noisyUser): Reduce duplicate code.

2005-11-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied patch #1344350 by Torsten Reincke to fix
	browser launching on MacOS X.

2005-10-23  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::alertWhenIdle): Add auto bookmark at
	alert point.

	* tkchat.tcl (::tkchat::BookmarkToggle): Stop auto bookmark from
	removing itself or a standard bookmark when it tried to set one
	in the same place that another already existed. Fix a race
	condition with tabs not being set (encountered while PC under
	heavy load).

	* tkchat.tcl (::tkchat::BookmarkRemoveAuto): Fix a bug that
	caused a crash when an auto bookmark tried to remove itself
	twice.

	* tkchat.tcl: Minor whitespace/style fixes.
